# chainlit_pj

./: .env.example  .gitignore  1.1_Chainlit_多機能AIワークスペース アプリケーション仕様書.md  1.2_Chainlit_多機能AIワークスペース_アプリケーション仕様書_更新版.md  AGENTS.md  AI_RESPONSE_SAVE_GUIDE.md  BUG_FIX_GUIDE.md  CHAINLIT_ACTION_FIX.md  CHAINLIT_API_FIX_PHASE4.md  CLAUDE.md  COMPLETE_HISTORY_FIX.md  Chainlit_多機能AIワークスペース_アプリケーション仕様書.md  ERROR_FIXED.md  ERROR_FIX_REPORT_20250813.md  ElectronとPython統合_詳細実装ガイド.md  FINAL_HISTORY_FIX_GUIDE.md  FINAL_SOLUTION.md  FIXED_ERRORS.md  FIX_ERROR.md  HISTORY_COMPLETE_GUIDE.md  HISTORY_FIX.md  HISTORY_RESTORE_FIX.md  IMPLEMENTATION_SUMMARY_v1.0.md  MIGRATION_GUIDE.md  MINIMAL_FILES.md  Phase1_動作確認.md  Phase2_動作確認.md  Phase2_実装まとめ.md  Phase3_動作確認.md  Phase3_実装まとめ.md  Phase4_動作確認.md  Phase4_実装まとめ.md  Phase5_修正内容.md  Phase5_公式機能版_完了.md  Phase5_動作確認.md  Phase5_実装まとめ.md  Phase6_動作確認.md  Phase6_実装まとめ.md  Phase7_動作確認.md  Phase7_実装まとめ.md  (+49 more)
.chainlit/: config.toml  tools_config.json
Phase7_test_files/: project_spec.md  vector_search_example.py
docs/: ACTION_EXAMPLES.md  API_CLARIFICATION.md  FILE_SEARCH_API_REFERENCE.md  MODULAR_ARCHITECTURE_GUIDE.md  PHASE2_PHASE3_IMPLEMENTATION_GUIDE.md  PORTABLE_WINDOWS_GUIDE.html  PORTABLE_WINDOWS_GUIDE.md  SECURE_VECTOR_STORE_GUIDE.md  STRUCTURE_OPTION_B.md  VECTOR_STORE_MIGRATION.md  VECTOR_STORE_SECURITY_IMPLEMENTATION.md  WINDOWS_PACKAGING.md  WINDOWS_TASKS.md
electron/: main.js  preload.js
geminiの修正案/: app.py  data_layer.py
handlers/: __init__.py  analytics_handler.py  command_handler.py  data_handler.py  persona_handler.py  search_handler.py  settings_handler.py  (+1 more)
(+93 files in other folders)
