[project]
name = "ai-workspace-chainlit"
version = "0.1.0"
description = "Multi-functional AI Workspace Application using Chainlit and OpenAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.6.8",
    "openai>=1.99.6",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "pypdf>=5.1.0",
    "pillow>=11.0.0",
    "reportlab>=4.2.5",
    "jinja2>=3.1.5",
    "httpx>=0.28.1",
    "typing-extensions>=4.12.2",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.3",
    "mypy>=1.13.0",
]

# Chainlitアプリケーションなのでビルド設定は最小限に
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
